<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:orientation="vertical"
    android:background="#d9d9d9"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="5dp">

    <EditText
        android:id="@+id/editTextExpenseNameAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/opis"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/editTextValueOfExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/wartosc"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:minHeight="48dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="127dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:hint="@string/data"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPopupCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/custom_add_expense_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonExpensePopupAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/dodaj"
        android:background="@drawable/custom_add_expense_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPopupCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/custom_add_expense_button"
        android:text="@string/anuluj"/>



</LinearLayout>